--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "aprendiendoreact",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atrefing/REACTLEARN.git"
+  },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Alo Trejo",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/atrefing/REACTLEARN/issues"
+  },
+  "homepage": "https://github.com/atrefing/REACTLEARN#readme",
+  "description": ""
 }
