Cambios hechos para agregar el tercer proyecto
 Changes to be committed:
	new file:   .gitignore
	new file:   package-lock.json
	modified:   package.json
	new file:   projects/.gitignore
	new file:   projects/03-follow-mouse/.gitignore
	new file:   projects/03-follow-mouse/index.html
	new file:   projects/03-follow-mouse/package-lock.json
	new file:   projects/03-follow-mouse/package.json
	new file:   projects/03-follow-mouse/public/vite.svg
	new file:   projects/03-follow-mouse/src/App.css
	new file:   projects/03-follow-mouse/src/App.jsx
	new file:   projects/03-follow-mouse/src/assets/react.svg
	new file:   projects/03-follow-mouse/src/index.css
	new file:   projects/03-follow-mouse/src/main.jsx
	new file:   projects/03-follow-mouse/vite.config.js

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "url": "https://github.com/atrefing/REACTLEARN/issues"
   },
   "homepage": "https://github.com/atrefing/REACTLEARN#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "standard": "^17.0.0"
+  }
 }
